k8s/ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: charan-capstone-app-ui-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      containers:
      - name: ui
        image: us-west1-docker.pkg.dev/citric-kit-489316-g6/charan-ar/ui-service:latest
        ports:
        - containerPort: 5000
          
        resources:
            requests:
              cpu: "100m"
            limits:
              cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: ui-service
spec:
  selector:
    app: ui
  ports:
    - port: 80
      targetPort: 5000
  type: ClusterIP
