k8s/network-policy.yaml
# 🔹 1. Default deny all ingress
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
spec:
  podSelector: {}
  policyTypes:
  - Ingress

---
# 🔹 2. Allow external traffic → UI
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-external-to-ui
spec:
  podSelector:
    matchLabels:
      app: ui
  policyTypes:
  - Ingress
  ingress:
  - from:
    - ipBlock:
        cidr: 0.0.0.0/0

---
# 🔹 3. Allow UI → all backend services
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ui-to-backend
spec:
  podSelector:
    matchExpressions:
    - key: app
      operator: In
      values: ["user","product","cart","payment"]
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: ui

---
# 🔹 4. Allow cart → user + product
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-cart-to-services
spec:
  podSelector:
    matchExpressions:
    - key: app
      operator: In
      values: ["user","product","payment"]
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: cart

---
# 🔹 5. Allow payment → cart
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-payment-to-cart
spec:
  podSelector:
    matchLabels:
      app: cart
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: payment
